Removed redundant methods and added more clarity in the output