@@ -1,13 +1,12 @@
 package models;
 
+import javax.swing.plaf.basic.BasicInternalFrameTitlePane;
 import java.util.ArrayList;
+import java.util.Map;
 
 public class Shape {
-    private double perimeter = 0;
 
     private ArrayList<Point> points = new ArrayList<Point>();
-
-    private ArrayList<Double> distances = new ArrayList<Double>();
 
     public Shape() {
         points = new ArrayList<>();
@@ -17,41 +16,32 @@ public class Shape {
         points.add(point);
     }
 
-    public void addLengths() {  // This method adds the distances between each point to the array (The lengths of the polygon)
+    public double calculatePerimeter() {  // This method returns the sum of all lengths
+        double perimeter = 0;
         int len = points.size();
         for (int i = 0; i < len - 1; i++) {
-            distances.add(points.get(i).distance(points.get(i+1).getX(), points.get(i+1).getY()));
+            perimeter += points.get(i).distance(points.get(i+1).getX(), points.get(i+1).getY());
         }
-        distances.add(points.get(len - 1).distance(points.getFirst().getX(), points.getFirst().getY()));
-    }
-
-
-    public double calculatePerimeter() {  // This method returns the sum of all lengths
-
-        for (int i = 0; i < distances.size(); i++) {
-            perimeter += distances.get(i);
-        }
+        perimeter += points.get(len - 1).distance(points.getFirst().getX(), points.getFirst().getY());
         return perimeter;
     }
 
     public double getAvgSide() {
-        return perimeter / distances.size();
+        return calculatePerimeter() / points.size();
     }  //  This method returns the average side of the polygon
 
     public double getLongestSide() {  // This method returns the longest side of the polygon
-        double maxSide = distances.get(0);
-        for (int i = 1; i < distances.size(); i++) {
-            if (distances.get(i) > maxSide) maxSide = distances.get(i);
+        int len = points.size();
+        double maxSide = points.get(len - 1).distance(points.getFirst().getX(), points.getFirst().getY());
+        for (int i = 0; i < len - 1; i++) {
+            double distance = points.get(i).distance(points.get(i+1).getX(), points.get(i+1).getY());
+            if (distance > maxSide) maxSide = distance;
         }
         return maxSide;
     }
 
     public ArrayList<Point> getPoints() {
         return points;
-    }
-
-    public ArrayList<Double> getDistances() {
-        return distances;
     }
 
 }
